fix styling issue on IE

--- a/packages/@coorpacademy-components/src/organism/review-congrats/style.css
+++ b/packages/@coorpacademy-components/src/organism/review-congrats/style.css
@@ -1,68 +1,49 @@
 @value breakpoints: "../../variables/breakpoints.css";
-@value tablet from breakpoints;
 @value mobile from breakpoints;
 @value colors: "../../variables/colors.css";
 @value cm_blue_900 from colors;
 
-/* @keyframes translateTitle {
-  0% {
-    transform: translate(0, 50%);
-  }
-  50% {
-    transform: translate(0, 50%) scale(1);
-  }
-  100% {
-    transform: translate(0, -350%) scale(0.6);
-  }
-} */
-
-
-/* @-webkit-keyframes translateTitle {
-  0% {
-    -webkit-transform: translate(0, 50%);
-  }
-  50% {
-    -webkit-transform:translate(0, 50%) scale(1);
-  }
-  100% {
-    -webkit-transform: translate(0, -350%) scale(0.6);
-  }
-} */
-
 @keyframes translateTitle {
   0% {
-    transform: translate(0, 50%);
+    transform: translateY(50%) scale(1);
+    -ms-transform: translateY(50%) scale(1);
   }
   50% {
-    transform: translate(0, 50%) scale(1);
+    transform: translateY(50%) scale(1);
+    -ms-transform: translateY(50%) scale(1);
   }
   100% {
-    transform: translate(0, -350%) scale(0.6);
+    transform: translateY(-300%) scale(0.6);
+    -ms-transform: translateY(-300%) scale(0.6);
   }
 }
 
 @keyframes translateYCardStar {
   0% {
-    height: 350px;
+    opacity: 0;
+    transform: translateY(0%);
+    -ms-transform: translateY(0%);
   }
   30% {
     opacity: 0;
     transform: translateY(40%);
+    -ms-transform: translateY(40%);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0%);
+    -ms-transform: translateY(0%);
   }
 }
 
 @keyframes translateXCardStar {
   0% {
-    opacity: 1;
     transform: translateX(50%);
+    -ms-transform: translateX(50%);
   }
   100% {
-    opacity: 1;
-    transform: translateX(0);
+    transform: translateX(0%);
+    -ms-transform: translateX(0%);
   }
 }
 
@@ -73,33 +54,35 @@
     z-index: -1;
     opacity: 0;
     transform: translateX(50%);
+    -ms-transform: translateX(50%);
   }
   1% {
     position: relative;
+    visibility: hidden;
+    z-index: -1;
+    opacity: 0;
+    transform: translateX(50%);
+    -ms-transform: translateX(50%);
   }
   100% {
     position: relative;
     visibility: visible;
     z-index: 0;
     opacity: 1;
-    transform: translateX(0);
+    transform: translateX(0%);
+    -ms-transform: translateX(0%);
   }
-}
-
-.mainContainer {
-  height: 100%;
 }
 
 .containerCongrats {
   align-items: center;
   display: flex;
-  flex-basis: auto;
   flex-direction: column;
   justify-content: center;
   overflow-y: auto;
   height: 100%;
   width: 100%;
-  position: relative;
+  position: absolute;
 }
 
 .title {
@@ -108,22 +91,16 @@
   font-size: 65px;
   font-style: normal;
   font-weight: 500;
-  /* display: flex; */
-  /* flex-shrink: 1; */
-  /* flex-basis: auto;   */
   position: relative;
-  top:200px;
-  /* position: absolute; */
+  top: 200px;
   user-select: none;
-  animation: translateTitle 1.4s ease-out forwards;
-  /* -webkit-animation: translateTitle 1.4s ease-out forwards; */
+  animation: translateTitle 1.4s ease-out 0s forwards;
 }
 
 .containerCards {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin-top: 64px; */
   position: relative;
 }
 
@@ -132,7 +109,6 @@
     translateXCardStar 0.2s ease-in-out 2s forwards;
   opacity: 0;
 }
-
 
 .cardRank {
   animation: translateCardRank 0.2s ease-in-out 2s forwards;
@@ -143,8 +119,16 @@
 }
 
 /* ie fallback */
-_:-ms-fullscreen, :root .cardRank {
-  position:inherit;
+_:-ms-fullscreen,
+:root .cardRank {
+  position: inherit;
+}
+
+_:-ms-fullscreen,
+:root .cardStar,
+.cardRank {
+  transform: translateX(50%);
+  -ms-transform: translateX(50%);
 }
 
 .buttonContainer {
@@ -165,24 +149,27 @@ _:-ms-fullscreen, :root .cardRank {
 @media mobile {
   @keyframes translateTitle {
     0% {
-      transform: translate(0, 50%);
+      transform: translateY(50%) scale(1);
+      -ms-transform: translateY(50%) scale(1);
     }
     50% {
-      transform: translate(0, 50%) scale(1);
+      transform: translateY(50%) scale(1);
+      -ms-transform: translateY(50%) scale(1);
     }
     100% {
-      transform: translate(0, -550%) scale(0.9);
+      transform: translateY(-400%) scale(0.9);
+      -ms-transform: translateY(-400%) scale(0.9);
     }
   }
 
   @keyframes translateXCardStar {
     0% {
-      opacity: 1;
-      transform: translateX(0);
+      margin-left: calc(100% - (100% - 240px));
+      margin-right: calc((100% - 240px) / 2);
     }
     100% {
-      opacity: 1;
-      transform: translateX(0);
+      margin-left: 100%;
+      margin-right: calc((100% - 240px) / 2);
     }
   }
 
@@ -191,6 +178,7 @@ _:-ms-fullscreen, :root .cardRank {
       opacity: 0;
       position: absolute;
       transform: translateX(0);
+      -ms-transform: translateX(0);
       visibility: hidden;
       z-index: -1;
     }
@@ -198,18 +186,15 @@ _:-ms-fullscreen, :root .cardRank {
       opacity: 1;
       position: relative;
       transform: translateX(0);
+      -ms-transform: translateX(0);
       visibility: visible;
       z-index: 0;
     }
   }
 
-  .mainContainer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-
   .containerCongrats {
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
   }
@@ -219,18 +204,12 @@ _:-ms-fullscreen, :root .cardRank {
     font-size: 35px;
   }
 
-  .test {
-    content:"\a0";
-    font-size: 85px;
-    height: 85px;
-    min-height: 85px;
-  }
   .containerCards {
     width: 100%;
     min-height: 350px;
     overflow-x: auto;
     overflow-y: hidden;
-    margin-top: 24px;
+    margin-top: 54px;
     padding-bottom: 10px;
   }
 
@@ -238,9 +217,10 @@ _:-ms-fullscreen, :root .cardRank {
     animation: translateYCardStar 0.6s ease-out 0.8s forwards,
       translateXCardStar 0.2s ease-in-out 2s forwards;
     flex-shrink: 0;
-    margin-left: calc(100% - (100% - 240px));
-    margin-right: calc((100% - 240px) / 2);
     opacity: 0;
+    /* margin-left: calc(100% - (100% - 240px)); */
+    /* margin-right: calc((100% - 240px) / 2); */
+    /* transform: translateX(0); */
   }
 
   .cardRank {
